Restructuring, removed example & split evaluation

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -1,7 +1,7 @@
 \begin{quote}
-	\textit{``If the chaos of the nineties reflects a radical shift in the paradigms of visual literacy, the final shift away from the Lascaux/Gutenberg tradition of a pre-holographic society, what should we expect from this newer technology, with his promise of discrete encoding and subsequent reconstruction of the full range of sensory perception?''}
+	\textit{``Let us wander in modernism's cabinet of curiously segmented senses to see what doors we might open to a differently mediated sensorium.''}
 \end{quote}
-\hfill \textit{Burning Chrome, William Gibson}
+\hfill \textit{The Mediated Sensorium, Caroline A. Jones}
 \\
 \\
 %=========================================================================================================
@@ -40,3 +40,21 @@ The advent of the smartphone lead to the dissemination of any number of Augmente
 And the Media Lab invented what they would call Cross Reality that linked a real world location with a virtual other via sensors \& actuators, such that an inhabitant of one could glimpse a tantalizing insight into the goings on of the `other' although they could not see into it.
 
 This thesis explores an alternate reality that as yet has received little attention or even a name. Parallel Reality as it came to be called builds upon the concept of Cross Reality \& its two distinct environments each `complete unto itself'. But instead of the shadow of one environment only laying upon the other by manner of sensors \& actuators, new VR technology combined with indoor positioning systems allow a user to switch between environments - to at one moment view their RW surroundings \& at the next to view the equivalent vantage in a parallel virtual environment
+
+%=====================
+%On why alternate realities are predominantly visual?
+
+\textit{``visual ordination of intellectual knowledge''}
+
+\textit{``Seeing remains an insistent metaphor for all of cognition only because while the ocular lobes are merely one of our brain's tentacular connections to reality, they are among the most `conscious' of their capacity for information control.''}
+
+The Mediated Sensorium, Caroline A. Jones
+
+
+
+Caroline A. James speaking on the work of Janet Cardiff \& George Bures Miller
+
+\textit{``Cardiff brings segmentation into the present, crafting `sound walks' that layer an alternate reality over the fl\^aneur's perambulations - a fantastic elaboration of the kind of personal soundscape chosen by the iPod user.''}
+
+
+\textit{``Sight plays such a prominent part in the mental life that the field of vision is sometimes considered almost synonymous with the field of attention.''}~\cite{Lucas1951}
