--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -698,7 +698,7 @@ Thus, a PR platform is well suited to situations in which interaction with the v
 
 %=========================================================================================================
 
-\section{Conclusions}
+\section{Summary}
 Decades of research into alternate realities has furnished us with a rich continuum of approaches \& technologies for creating, combining, augmenting \& diminishing real \& virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence \& virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented/diminished reality \& augmented virtuality).
 
 Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real \& the other virtual \& both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques \& applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments.
@@ -707,4 +707,4 @@ Previous cross reality research focussed on alleviating this vacancy problem by 
 
 This thesis serves to extend alternate reality research by developing a system that allows its user to visually engage with both a real \& a virtual environment, transitioning between them at any point, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept is born.
 
-Simply put in the terms of Lifton's original definition of the vacancy problem, this thesis aims to allow people to be in more than one place (reality) at a time.
+In the terms of Lifton's definition of the vacancy problem, this thesis aims to allow people to be in more than one place (reality) at a time.
