--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -871,7 +871,7 @@ The accuracy of orientation tracking does not change with different positional a
 
 %=========================================================================================================
 
-\section{Conclusions}
+\section{Summary}
 
 This chapter has introduced virtual heritage as a field in which the successful application of alternate reality techniques has a proven history \& to which the application of PR promises to be of further benefit. The Virtual Time Window project was introduced as an initial foray into the realm of applying PR to virtual heritage, making use of an x86 tablet computer imbued with position \& orientation sensing via GPS \& combined accelerometer/magnetometer, for PR exploration of outdoor cultural heritage sites \& their virtual reconstructions hosted upon an OpenSim framework. An implementation of this platform is presented, however real world experimentation revealed that the accuracy of positional tracking obtainable, even by discrete GPS receivers that outperform those mainstream receivers found in smartphones, is not sufficient for the envisaged style of interaction. Furthermore, the ability of a complete virtual environment presented on a small hand held display to provide a greater sense of immersion in a complete, atmospheric virtual environment was found to be lacking \& thus the pursuit of this modality of PR interaction was not continued.
 
