--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -40,9 +40,23 @@ Figure \ref{systemarchitecture} presents a high level architectural overview of 
 	\end{center}
 \end{figure}
 
-The HMD is imbued with video see-through functionality by the addition of cameras, to allow the user to see their RW environment. A controller held by the user allows them to trigger their view to switch between RW \& VR. The users' location within the cultural heritage site is tracked using an Indoor Positioning System (IPS). The mobile client that produces the graphical content delivered to the HMD can either be carried about the person (perhaps as a belt pack, or worn in a bag/satchel) or possibly be streamed from a powerful static computer to a lightweight mobile receiver carried about the person.
+The HMD is imbued with video see-through functionality by the addition of cameras, to allow the user to see their RW environment. A controller held by the user allows them to trigger their view to switch between RW \& VR. The users' location within the RW environment, in our investigation a cultural heritage site, is tracked using an Indoor Positioning System (IPS). The mobile client that produces the graphical content delivered to the HMD can either be carried about the person (perhaps as a belt pack, or worn in a bag/satchel) or possibly be streamed from a powerful static computer to a lightweight mobile receiver carried about the person.
 
-\textbf{***I think there needs to be some more explanation/diagram/picture of the system here before I start talking about the specifics of the implementation?}
+Emphasis should be placed on the fact that the two views, RW \& VR, through the function of IPS \& head tracking combined with the spatial equivalence of the constituent environments, represent equivalent vantage points within the two environments, differentiating the modality of interaction from the visual perception exchange systems exhibited in an Istanbul church by Mathieu Briand;
+
+\begin{quote}
+	\textit{``In an earlier version, set in the Hagia Eirene church in Istanbul, visitors wearing a wireless headgear viewing device could press a button to exchange the image on the screen with that of another of the six headgear cameras, revealing whatever it was pointing at. Visitors were fascinated by the dynamic visual transformations, such as the way the brightly painted floor could suddenly be replaced by the church dome as they wandered around the space.''}~\cite{Jones2006}
+\end{quote}
+
+Likewise, the modality of interaction provided by the Mirrorshades platform distances itself from that of Briand's later experiments into `controlled schizophrenia', in which displacement of body \& visions were intentional;
+
+\begin{quote}
+	\textit{``The audience members wear helmets that incorporate a camera, goggle-style compact monitor, and headphones. The audience members may also carry a connector that can be plugged and unplugged from the nine sockets placed around the museum, in order to exchange audiovisual experiences with others.}
+
+	\textit{When a connector is not plugged into a socket, one sees the environment through his/her own camera. In other words, one walks around seeing the surrounding environment through his goggle monitor. When the connector is plugged into a socket on the wall, the person sees the view taken by one of the three cameras installed in the building, or taken by another camera worn by another audience member whose camera is also connected to a socket.''}~\cite{Jones2006}
+\end{quote}
+
+As the different views that a user of the Mirrorshades platform switches between are inherently the same `place', seen from the same vantage point.
 
 %=========================================================================================================
 
@@ -725,7 +739,7 @@ Testing then took place with members of the Open Virtual Worlds research group\f
 
 %=========================================================================================================
 
-\section{Conclusions}
+\section{Summary}
 \begin{itemize}
 	\item Learned from VTW, needed more accurate positioning \& more immersive display tech
 	\item Moving to indoor \& HMD solves both, whilst also allowing the PR investigation to cover a different deployment scenario
