--- a/thesis.tex
+++ b/thesis.tex
@@ -171,8 +171,8 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Extended Example}
-\input{02_example/example.tex}
+%\chapter{Extended Example}
+%\input{02_example/example.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
@@ -189,13 +189,14 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Mirrorshades - Development}
+\chapter{Mirrorshades}
 \graphicspath{ {05_mirrorshades_design_implementation/images/} }
 \input{05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Mirrorshades - Evaluation}
+%\chapter{Mirrorshades - Evaluation}
+\chapter{Evaluation - Merit of PR}
 \graphicspath{ {06_mirrorshades_studies_results/images/} }
 \input{06_mirrorshades_studies_results/mirrorshades_studies_results.tex}
 
