Incorporating parts from Oxford Handbook of Virtuality.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -1,7 +1,7 @@
 \begin{quote}
-	\textit{``Let us wander in modernism's cabinet of curiously segmented senses to see what doors we might open to a differently mediated sensorium.''}
+	\textit{``The major challenge for the future will be effectively and cheaply to shift the sense of presence from one's own body to another, without replacing or excluding the physical world in which we all exist.''}
 \end{quote}
-\hfill \textit{The Mediated Sensorium, Caroline A. Jones}
+\hfill \textit{Distributed Embodiment: Real Presence in Virtual Bodies, Waterworth \& Waterworth}
 \\
 \\
 %=========================================================================================================
