--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -444,9 +444,9 @@ From the log data, participants displayed restricted head movement throughout th
 %\section{Stage 2 - Informing PR Implementation}
 
 \begin{quote}
-	\textit{``If the chaos of the nineties reflects a radical shift in the paradigms of visual literacy, the final shift away from the Lascaux/Gutenberg tradition of a pre-holographic society, what should we expect from this newer technology, with his promise of discrete encoding and subsequent reconstruction of the full range of sensory perception?''}
+	\textit{``Let us wander in modernism's cabinet of curiously segmented senses to see what doors we might open to a differently mediated sensorium.''}
 \end{quote}
-\hfill \textit{Burning Chrome, William Gibson}
+\hfill \textit{The Mediated Sensorium, Caroline A. Jones}
 \\
 \\
 
@@ -476,7 +476,7 @@ As with the stage 1 investigation, a range of both qualitative \& quantitative d
 
 Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-2-1}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{appendix-9-item-likert-type-questionnaire-stage-2-2}). The SUS questionnaire was not used, while post-task interviews (prompts included as appendices \ref{appendix-interview-questions-stage-2-1} \& \ref{appendix-interview-questions-stage-2-2} for stage 2.1 \& stage 2.2 respectively) \& logging were present. In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
 
-As presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature, attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
+As presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature due to the fact that presence (whether in physical or virtual environments) is perceptual~\cite{Waterworth2014}, attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
 In this categorisation system, one could consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence \& the interview \& Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparison is made between different styles of transition in hopes of ascertaining which result in less pronounced breaks in presence (deflections upon the focus of attention axis of the combined Milgram/Waterworth model), the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques to inquire more directly \& scientifically about this aspect of the evaluation than the other evaluation techniques employed.
 
@@ -486,7 +486,7 @@ In this categorisation system, one could consider the log data recorded by the M
 
 Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from a RW environment that features high spatial equivalence \& a mutual vantage point with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it \& can be attended to in tandem.
 
-This distinction is perhaps best explained as a difference in the use of the term `presence', which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
+This distinction is perhaps best explained as a difference in the use of the term `presence', \textit{``which is often used to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
 
 Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is likely beneficial, rather than detrimental, to the overall experience.
 
@@ -503,6 +503,8 @@ For a well implemented traditional VR experience that elicits a high sense of (v
 However, in a PR scenario that features high spatial equivalence between its constituent RW \& VR environments, this tie between SP \& INV may not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are inherently compatible with those in the RW environment, so SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as (inherently possible) RW bodily actions are shared (`possible') with the VR environment.
 
 Thus a restrained expectation for the results of the IPQ when applied to a PR scenario would be for generally lower INV scores than a traditional VR scenario but without drastic reduction in SP scores. An optimistic expectation for a well implemented PR scenario would be for lower INV scores \& \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment will lead to an increase in experienced spatial presence in the VR environment.
+
+Although a traditional view of augmented reality is that it aims to enhance the sense of presence in the physical world~\cite{Waterworth2014}, this does not necessarily stand as an aim of PR. This is due to the fact that instead of augmented the primary environment of the user's RW surroundings PR instead presents the user with two separate (debatably both `primary') environments.
 
 %=========================================================================================================
 
