--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -1,7 +1,7 @@
 \begin{quote}
-	\textit{``It also reflects the transformation of our internal world, which, as a result of our increasing access to diverse virtual information, continues to expand in a way that seems disconnected from our relationship to the external world.''}
+	\textit{``If the chaos of the nineties reflects a radical shift in the paradigms of visual literacy, the final shift away from the Lascaux/Gutenberg tradition of a pre-holographic society, what should we expect from this newer technology, with his promise of discrete encoding and subsequent reconstruction of the full range of sensory perception?''}
 \end{quote}
-\hfill \textit{Yuko Hasegawa on the work of Mathieu Briand, Sensorium}
+\hfill \textit{Burning Chrome, William Gibson}
 \\
 \\
 
