--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -43,13 +43,13 @@ The concept of \textit{telepresence} is not included in this discussion, as it i
 
 %telepresence vs virtual presence
 
-\subsection{Milgram et al.'s Reality-Virtuality Continuum}
+\subsection{Milgram \& Kishino's Reality-Virtuality Continuum}
 \label{milgram&kishino}
-Milgram et al. addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of augmented reality~\cite{Milgram1994, Milgram1999}.
+Milgram \& Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of augmented reality~\cite{Milgram1994, Milgram1999}.
 
 %However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
 
-One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other - the \textit{Reality-Virtuality continuum} (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, top). The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, bottom), where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer.
+One of the overbearing concepts introduced by Milgram \& Kishino is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other - the \textit{Reality-Virtuality continuum} (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, top). The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} (figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}, bottom), where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer.
 
 \begin{figure}[h]
 \centering
@@ -60,21 +60,25 @@ One of the overbearing concepts introduced by Milgram et al. is that whilst both
 
 With a purely virtual environment, the entire viewport must necessarily be computer modelled in order to be rendered and as such there is complete quantitative information about \& between all objects being presented. At the opposite end of the spectrum with a completely real environment where none of the viewport is computer modelled there is no quantitative information associated with the content being displayed. At any point between the extremes the environment consists of a mixture of some modelled and some non-modelled content, the computer associating quantitative information to, and between, the virtual objects, but not to the real objects or between the virtual and real objects.
 
-Carrying the continuum concept further, Milgram et al. illustrate their understanding of augmented reality and also introduce two related new terms; augmented virtuality and mixed reality. In this fashion, mixed reality is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that mixed reality encompasses both augmented reality and augmented virtuality.
+Carrying the continuum concept further, Milgram \& Kishino illustrate their understanding of augmented reality and also introduce two related new terms; augmented virtuality and mixed reality. In this fashion, mixed reality is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown here that mixed reality encompasses both augmented reality and augmented virtuality.
 
-An obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being augmented reality into augmented virtuality or vice-versa. The answer lies with consideration of the quantitative knowledge associated with the objects that comprise the viewport.
+An obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being augmented reality into augmented virtuality or vice-versa. The answer to this question lies with consideration of what `background' environment is being augmented.
 
-For example, if one were to take a viewport depicting a purely real environment and then incrementally add more and more virtual objects, the environment's classification would progress rightward along the continuum. Eventually the entire viewport would be obscured by virtual objects and the obvious conclusion would be to classify the environment as being purely virtual. However this would only be true if there was complete quantitative information associated with, and between, all of the virtual objects within the real 3D space of the viewport, which is unlikely to be the case.
+If one were to take a viewport depicting a purely real environment and then incrementally add more and more virtual objects, the environment's classification might intuitively seem to progress rightward along the continuum. Eventually, with the majority of the real environment obscured by virtual objects one might posit that the resultant environment should therefore pass the centre point of the continuum \& sit somewhere in its right half, gaining the classification of augmented virtuality. Likewise if one were to take a viewport depicting a purely virtual environment and incrementally introduce more sampled real objects to it, one might posit that it would eventually pass the centre point of the continuum \& come to rest in the territory of augmented reality.
 
-Likewise if one were to take a viewport depicting a purely virtual environment and incrementally replace the entire viewport with sampled real objects we could not classify the resultant environment as purely real as there would be associated quantitative knowledge with and between the sampled objects, meaning that the environment isn't completely unmodelled and thus could not be classified as purely real.
+Anthony Steed's extension to Milgram \& Kishino's reality-virtuality continuum clarifies the fallacy of this thinking by introducing the concept of the `primary environment';
 
-Thus, Milgram et al. conclude it is not necessarily true that an environment is purely virtual simply because all of the visible objects are computer modelled, nor is it necessarily true that an environment is purely real simply because all of the visible objects are sampled from the real world.
+\begin{quote}
+\textit{``While it is quite clear that the intention of plotting this axis was not to claim that it was actually a continuum between real and virtual, it is nevertheless clear that the main `environment' could be one of three things: a purely virtual environment, the local environment, or a remote real environment\footnote{Telepresence.}. One can think about what the background of the environment that the users see is...''}~\cite{Steed2014}
+\end{quote}
+
+As such, considering the first case of taking a viewport depicting a real environment \& incrementally adding more virtual objects to it, the resultant environment is necessarily always augmented reality as the primary environment, that is the background upon which the augmentations are being placed, is real. Likewise in the second case the resultant environment is necessarily always augmented virtuality, as it is a virtual background environment that is the subject of the augmentations.
 
 %=========================================================================================================
 
 \subsection{Roy Want's Virtuality Matrix}
 
-Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{Want_virtuality_matrix_original.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram et al. \& the wider literature.
+Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{Want_virtuality_matrix_original.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram \& Kishino or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{Want_virtuality_matrix_modified.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram \& Kishino \& the wider literature.
 
 \TwoFig{Want_virtuality_matrix_original.png} {Want's original virtuality matrix.} {Want_virtuality_matrix_original.png}
        {Want_virtuality_matrix_modified.png} {Modified Want matrix.} {Want_virtuality_matrix_modified.png}
@@ -93,7 +97,7 @@ Steve Mann, the \textit{``father of wearable computing''}~\cite{Schofield2012} \
 
 %Alone Together p 151
 
-Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist - Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment \& a wholly virtual environment as the logically possible extremes, as in Milgram et al.'s continuum).
+Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist - Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn of mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality (at least when considering a wholly real environment \& a wholly virtual environment as the logically possible extremes, as in Milgram \& Kishino's continuum).
 
 \TwoFig{Mann_venn_original.png} {Original Mann Venn diagram.} {Mann_venn_original.png}
        {Mann_venn_mod_1.png} {Modified Mann Venn diagram.} {Mann_venn_mod_1.png}
@@ -368,7 +372,7 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 
 \newcommand{\avxrfootnote}{\footnote{This discussion over the relationship between AR \& XR also stands for the relationship between AV \& XR, however as AV has received less attention in the literature \& in commercially available implementations, the discussion uses AR as its example.}}
 
-The position of XR in relation to other alternate realities can be visualised using Milgram et al.'s virtuality continuum. As one of the defining characteristics of a XR system is that it features two environments, both complete unto themselves, the explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-information-flows-dashed.png} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
+The position of XR in relation to other alternate realities can be visualised using Milgram \& Kishino's virtuality continuum. As one of the defining characteristics of a XR system is that it features two environments, both complete unto themselves, the explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-information-flows-dashed.png} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
 
 %Ontology - The core meaning within computer science is a model for describing the world that consists of a set of types, properties, and relationship types. There is also generally an expectation that the features of the model in an ontology should closely resemble the real world (related to the object).
 
@@ -388,6 +392,8 @@ Although a XR system as a whole should definitely be considered a case of MR, wh
 %***this is more to do distribution of the dashed line surrounding the environments, rather than the position of the environments themselves (solid line)***
 
 %However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} \& \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
+
+A further distinction between AR \& XR is made by considering Steed's primary environment concept. For an AR system the primary environment is necessarily real, as AR describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for an XR system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the RW environment of an XR system \& views their unmediated surroundings (including actuations trigger by events within the VR environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor \& uses an avatar to walk through the VR environment of the same XR system \& views the avatar's VR surroundings (including visualisations of sensor data collected from the RW environment), one would posit that their primary environment is virtual.
 
 \begin{figure}[h]
 	\begin{center}
@@ -421,6 +427,8 @@ Although a XR system as a whole should definitely be considered a case of MR, wh
 	\end{center}
 \end{figure}
 
+%=========================================================================================================
+
 \section{Parallel Reality}
 
 \newcommand{\PRfootnote}{\footnote{Note that the use of `PR' in the quotation in section \ref{subsec_HyperReality} is a reference to `physical reality' (that author's term for what this thesis simply calls `reality') \& is not a reference to parallel reality.}}
@@ -444,6 +452,10 @@ Thus, the system developed in this thesis cannot be considered true a XR system 
 \end{quote}
 
 Should a bidirectional information flow be introduced to a PR system, or the ability to transition between receiving stimuli from either environment be introduced into a cross reality system, one would effect \textit{parallel cross reality}.
+
+Picking up the discussion of primary environments once more, if one follows the reasoning that the primary environment of an XR system depends upon the method with which the user interacts with the system, it stands that a PR system is one that provides the user the ability to change this method \& thus change their primary environment. In this regard we further distinguish a PR system from an AR system, by defining it as one that allows its users to switch between two different primary environments rather than one that augments any particular environment.
+
+%=========================================================================================================
 
 \subsection{Spatial Equivalence in Parallel Reality}
 
@@ -542,16 +554,20 @@ Any investigation into alternate realities, virtual reality in particular, is li
 Related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy \& attention on a coherent set of stimuli \& it is theorized that both involvement \& immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
 \subsection{Waterworth \& Waterworth's three dimensions of virtual experience}
-
+\label{waterworthandwaterworth}
 \newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, whether these environmental stimuli originate from a real environment, a virtual environment, a mixed reality environment, or even from multiple discrete environments.}}
 
 \newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}.}}
 
-This notion of the sense of presence depending upon multiple factors is explored further by Waterworth \& Waterworth who present the \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}. In this model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, or a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning.
+This notion of the sense of presence depending upon multiple factors is explored further by Waterworth \& Waterworth who present the \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}. In this model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, or a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept that is clarified by the authors in a subsequent publication;
+
+\begin{quote}
+	\textit{``Presence arises from active awareness of our embodiment in a present world around us. Presence is not consciousness, and we may be highly conscious while feeling absent, at those times when we are relatively unaware of our own embodiment.''}~\cite{Waterworth2014}
+\end{quote}
 
 In this model, the notion of \textit{involvement} relates closely to the \textit{focus of attention} axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities \& events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
 
-Similarly, a relationship can be drawn between this model \& Milgram et al.'s virtuality continuum, with the latter considered here to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
+Similarly, a relationship can be drawn between this model \& Milgram \& Kishino's virtuality continuum, with the latter considered here to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
 
 \begin{figure}[h]
 	\begin{center}
@@ -560,6 +576,12 @@ Similarly, a relationship can be drawn between this model \& Milgram et al.'s vi
 		\label{focus-locus-sensus-with-virtuality-continuum}
 	\end{center}	
 \end{figure}
+
+Regarding this combined Milgram/Waterworth model we see more clearly that the balance between presence \& absence relates to any environment upon the locus of attention axis, as confirmed by Waterworth \& Waterworth in a subsequent publication;
+
+\begin{quote}
+	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
+\end{quote}
 
 %The Sensus Dimension - the importance of being awake in class
 %"Even as we sleep dreamlessly..." (example of being 'unconscious' in this regard)
