Registration subsection added to MShades development chapter.

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -7,6 +7,8 @@
 %=========================================================================================================
 %=========================================================================================================
 
+\label{introduction}
+
 %\begin{itemize}
 %	\item \textbf{Content -} Short (10 pages is probably far too much). High level introduction to the concepts/topics involved in the thesis, very short/broad definitions of any terms introduced in the title (eg `simultaneous presence'), overview of the rest of the document, list of contributions/donations of this document
 %	\item \textbf{What has been done -} Nothing.
