--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -262,7 +262,7 @@ HR is an abstract, high level term that refers to a category of mixed reality en
 
 \subsection{PolySocial Reality}
 
-PolySocial Reality (PoSR) describes situations in which people multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks \& apps for Internet mediated social interaction. Instead of defining a new type of alternate reality in terms of the provenance of the audiovisual stimuli received by a subject, PoSR is concerned with the provenance of the multiple, simultaneous social interactions that are mediated through various telecommunications media~\cite{Applin2012}. It has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001}, so it should not come as much surprise to observe people maintain PolySocial interactions between their real environment \& a virtual one.
+PolySocial Reality (PoSR) describes situations in which people multiplex their physical reality, where they engage in face-to-face social interaction, with Web-based social networks \& apps for Internet mediated social interaction. Instead of defining a new type of alternate reality in terms of the provenance of the audiovisual stimuli received by a subject, PoSR is concerned with the provenance of the multiple, simultaneous social interactions that are mediated through various telecommunications media~\cite{Applin2012}. It has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001}, so it should not come as much surprise to observe people maintain PolySocial interactions between their real environment \& a virtual one, as the opening quote to chapter \ref{introduction} from Waterworth \& Waterworth posits will be the case.
 
 \textbf{*** Mention place vs non-place?}
 
@@ -696,13 +696,13 @@ Sensus is expected to be largely task dependent, however when performing a task 
 %=========================================================================================================
 
 \section{The Case for Parallel Reality}
-
+\label{caseforpr}
 %ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
 
 A PR system that presents the user with the choice between visual stimuli from both its constituent environments (RW \& VR) allows that user to engage with both real \& virtual content in a manner that is similar to, but has a number of advantages over previous alternate reality systems, including traditional AR implementations \& XR systems;
 
 \begin{itemize}
-	\item a PR system is less critical of registration (the accurate positioning/alignment) between real \& virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment;
+	\item a PR system is less critical of registration (the accurate positioning/alignment) between real \& virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment~\cite{Azuma1997};
 	\item a PR system can make use of existing VR content without the overhead of decanting/extracting a subset of the virtual components into an AR framework (e.g. manually selecting which objects within the VR environment are to be displayed over the RW environment);
 	\item the use of a complete VR environment allows virtual content to be more encompassing \& immersive, as presenting a complete VR environment allows total control over lighting, shadows, reflections, particle effects, etc. which would be difficult or impossible for an AR platform to render atop a view of a RW environment.
 	\item the vacancy problem is further addressed, but instead of doing so by linking real \& virtual environments by sensor \& actuator infrastructure, vacancy in either environment is alleviated by furnishing users with the ability to transition between visual stimuli from each environment.
